# BRAD

./: .dockerignore  .gitignore  .readthedocs.yaml  BRAD-Stable-7.ipynb  BRAD.exe.spec  Dockerfile  LICENSE  MANIFEST.in  RAG.py  README.md  Untitled.ipynb  Untitled1.ipynb  Widgets-Overview.ipynb  app.py  bifGuessing.ipynb  brad.def  chatWhistory.ipynb  chatbot.py  config.json  demo-5102024.ipynb  enrichr.py  environment.yml  experiment.ipynb  gene_list.txt  gene_ontology.py  gui.spec  increment_version.py  matlabCaller.py  nvidia.ipynb  openai.ipynb  packagingBRAD.ipynb  pyproject.toml  requirements.txt  requirements_ram.txt  router.py  scraper.py  seabornCaller.py  setup.py  snakemakeCaller.py  tables.py  (+2 more)
.github/ISSUE_TEMPLATE/: refactor.md
.github/workflows/: docker-image.yml  pypi.yml
BRAD/: __init__.py  agent.py  blast.py  blat.py  brad.py  bradllm.py  chat.py  coder.py  constants.py  endpoints.py  enrichr.py  functionCaller.py  geneDatabaseCaller.py  gene_ontology.py  justchat.py  llms.py  log.py  matlabCaller.py  planner.py  promptTemplates.py  pythonCaller.py  rag.py  router.py  scraper.py  seabornCaller.py  snakemakeCaller.py  tables.py  utils.py  writer.py
BRAD.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
BRAD/config/: config.json  configSeaborn.json  configSnakemake.json
BRAD/config/.ipynb_checkpoints/: config-checkpoint.json  configSeaborn-checkpoint.json
BRAD/helperData/.ipynb_checkpoints/: gene_list-checkpoint.txt  ggetEnrichrDatabases-checkpoint.tsv
BRAD/pipelines/: biomarkerSelection1.json  biomarkerSelectionLoop.json
BRAD/routers/: code.txt  data.txt  enrichr.txt  matlab.txt  planner.txt  python.txt  rag.txt  router.txt  scrape.txt  table.txt  write.txt
BRAD/routers/.ipynb_checkpoints/: data-checkpoint.txt  sns-checkpoint.txt
brad-chat/: package-lock.json  package.json
brad-chat/public/: index.html
brad-chat/src/: App.css  App.js  setupProxy.js
brad-chat/src/components/: ChatContainer.js  ChatSessions.js  LeftSideBar.js  LeftSidebarButton.js  MessageInput.js  MessageList.js  PopUpApiEntry.js  RagFileInput.js  RightSideBar.js  SearchSettings.js  SessionList.js  Suggestions.js  ThemeChange.js
brad-chat/src/utils/: Utils.js
deployment/: docker-compose.yml
docs/: Makefile  requirements.txt
docs/source/: about.rst  bioinformaticsPy  bradPy.rst  conf.py  configs.rst  devGuide.rst  distribution.rst  gui.rst  index.rst  llmsPy.rst  ragPy.rst  routingPy.rst  runningCodesPy.rst  userGuide.rst  webSearchPy.rst
docs/source/.ipynb_checkpoints/: about-checkpoint.rst  conf-checkpoint.py  devGuide-checkpoint.rst  index-checkpoint.rst  userGuide-checkpoint.rst
docs/source/tutorials/: README.md
experimental/: BRAD-Paper-Quick-Figs.ipynb  DB-Building-w-Statistics.ipynb  DigitalLibrary-15-June-2024.ipynb  DigitalLibrary.ipynb  EX-10-JUNE-2024-LLM-llama3-70b.csv  EX-10-June-2024-Analysis-jpic.ipynb  EX-10-June-2024-Analysis-machoi2.ipynb  EX-10-June-2024-Analysis-oliven.ipynb  EX-10-June-2024-Qs.csv  EX-10-June-2024-llama2-70b.ipynb  EX-10-June-2024-llama3-70b.ipynb  EX-10-June-2024.ipynb  EX-11-June-2024-llama2-7b.ipynb  EX-JUNE-11-2024-RETREIVAL-JPIC.ipynb  EX-temperature-12-JUNE-JPIC.ipynb  EX-temperature-NO-RAG.py  EX-temperature-NO-RAG.sh  EX-temperature-RAG.py  EX-temperature-RAG.sh  EX-temperature-response-similarity.py  EX-temperature-response-similarity.sh  JP-Retrieval-EXP.ipynb  JP-experiment.ipynb  JP-llama-gpu.ipynb  JP-multimodal-RAG.ipynb  June-13-2024.ipynb  MAC-code.ipynb  Nat_6_14.ipynb  Untitled.ipynb  Widgets-Overview.ipynb  autoCallDownload.ipynb  bifGuessing.ipynb  bioinformatics-databases.ipynb  demo-5102024.ipynb  finetuningForFunctionCalling.ipynb  functionCallingLLM.ipynb  jpic-rag.ipynb  llama3.ipynb  matlabCaller.ipynb  nemoGuardRails.ipynb  (+8 more)
experimental/MAC/: MAC-GO.ipynb  MAC-recursive.ipynb  MAC-semantic.ipynb  brad-figs-ragas.ipynb
functioncalling/: hues.txt  variables.txt
helperData/: gene_list.txt
routers/: data.txt  load.txt  rag.txt  scrape.txt  sns.txt
routers/.ipynb_checkpoints/: enrichr-checkpoint.txt  load-checkpoint.txt
testNotebooks/: Untitled.ipynb  openai.ipynb
testNotebooks/logs/November 15, 2024 at 02:48:31 PM/: log.json
testNotebooks/logs/November 15, 2024 at 02:51:42 PM/: log.json
testNotebooks/logs/November 15, 2024 at 03:18:17 PM/: log.json
testNotebooks/logs/November 15, 2024 at 03:19:25 PM/: log.json
testNotebooks/logs/November 15, 2024 at 03:21:51 PM/: log.json
tutorials/: README.md
tutorials/DMD-Demo/: DMD-Demo.ipynb  data-engineering.ipynb
tutorials/RAG-with-BRAD/: RAG-with-BRAD.ipynb
tutorials/benchmark-search/: config-benchmarking-compression.json  config-benchmarking.json  digital-library-fig.ipynb
tutorials/benchmarking-llms/: benchmarking-scraping.ipynb  graphics.ipynb
tutorials/biomarkers/: biomarkerTests-v2.ipynb  biomarkerTests.ipynb  config-biomarkers.json  config-challenge.json  config-functional.json  functionalObservability.ipynb  in-code.ipynb  scratch.ipynb
tutorials/control/: config-no-debug.json  config.json  kalman-criteria.ipynb  pendcart.ipynb  pendcart.m  scratch.m  state-estimation.ipynb  structural-controllability.ipynb
tutorials/digital-laboratory/: minimal-example.ipynb
tutorials/finding-new-literature/: finding-new-literature.ipynb
tutorials/geneformer/: config-sc.json  geneformer-embedding-with-BRAD.ipynb  hsc-investigation.ipynb
tutorials/getting-started/: Quickstart.ipynb
tutorials/gui/: gui.py  v0.ipynb  v1.ipynb
tutorials/online-bioinformatics-databases/: bioinformatics-databases.ipynb
tutorials/planner/: PCNA_hwgFirstOrderInteractions_output.tsv  conditional-plans.ipynb  config-planner.json  planner-v2.ipynb  planner.ipynb
tutorials/ragas/: brad-figs-ragas.ipynb  config-ragas-rag-e.json  config-ragas-rag.json  config-ragas.json  jpic-figures.ipynb  ragas.ipynb
tutorials/running-codes/: PYTHON.ipynb  running-codes.ipynb
tutorials/running-foundation-models/: Untitled.ipynb
tutorials/scanpy/: config-scanpy.json  scanpy-v2.ipynb  scanpy.ipynb
tutorials/scrape-rag/: rag-scrape-loop.ipynb
(+190 files in other folders)
