[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['BRAD']

[project]
name = "BRAD"
version = "0.1"
authors = [
  { name="Joshua Pickard", email="jpic@umich.edu" },
]
description = "This package connects large language models with bioinformatics workflows."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Jpickard1/RAG-DEV"
"Bug Tracker" = "https://github.com/Jpickard1/RAG-DEV"


