[tool.poetry]
name = "BRAD-Chat"
version = "0.0.4.1"
description = "This package connects large language models with bioinformatics workflows."
authors = ["Joshua Pickard <jpic@umich.edu>"]
readme = "README.md"
packages = [{include = "BRAD"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.9"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.0"
appdirs = "1.4.4"
asgiref = "3.8.1"
asttokens = "2.4.1"
attrs = "24.2.0"
backoff = "2.2.1"
bcrypt = "4.2.0"
beautifulsoup4 = "4.12.3"
biopython = "1.84"
blinker = "1.8.2"
boto3 = "1.35.37"
botocore = "1.35.37"
bs4 = "0.0.2"
build = "1.2.2.post1"
cachelib = "0.9.0"
cachetools = "5.5.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
chroma-hnswlib = "0.7.3"
chromadb = "0.5.1"
click = "8.1.7"
cohere = "5.9.0"
colorama = "0.4.6"
coloredlogs = "15.0.1"
colorlog = "6.8.2"
comm = "0.2.2"
contourpy = "1.3.0"
cssselect = "1.2.0"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
decorator = "5.1.1"
deprecated = "1.2.14"
distro = "1.9.0"
durationpy = "0.9"
executing = "2.1.0"
fake-useragent = "1.5.1"
fastapi = "0.115.0"
fastavro = "1.9.7"
filelock = "3.16.1"
flask = "3.0.3"
flask-caching = "2.3.0"
flatbuffers = "24.3.25"
fonttools = "4.54.1"
frozenlist = "1.4.1"
fsspec = "2024.9.0"
gget = "0.28.6"
google-auth = "2.35.0"
googleapis-common-protos = "1.65.0"
greenlet = "3.1.1"
grpcio = "1.66.2"
h11 = "0.14.0"
httpcore = "1.0.6"
httptools = "0.6.1"
httpx = "0.27.2"
httpx-sse = "0.4.0"
huggingface-hub = "0.25.2"
humanfriendly = "10.0"
idna = "3.10"
importlib-metadata = "8.4.0"
importlib-resources = "6.4.5"
ipython = "8.28.0"
ipywidgets = "8.1.5"
itsdangerous = "2.2.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
jiter = "0.6.1"
jmespath = "1.0.1"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jupyterlab-widgets = "3.0.13"
kiwisolver = "1.4.7"
kubernetes = "31.0.0"
langchain = "^0.3.7"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.7"
langchain-nvidia-ai-endpoints = "^0.3.5"
langchain-openai = "^0.2.9"
langchain-text-splitters = "^0.3.2"
langsmith = "0.1.132"
lxml = "5.3.0"
lxml-html-clean = "0.3.1"
markdown-it-py = "3.0.0"
markupsafe = "3.0.1"
marshmallow = "3.22.0"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
mmh3 = "5.0.1"
monotonic = "1.6"
mpmath = "1.3.0"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
mysql-connector-python = "8.0.29"
networkx = "3.3"
numpy = "1.26.4"
oauthlib = "3.2.2"
onnxruntime = "1.19.2"
openai = "^1.55.0"
opentelemetry-api = "1.27.0"
opentelemetry-exporter-otlp-proto-common = "1.27.0"
opentelemetry-exporter-otlp-proto-grpc = "1.27.0"
opentelemetry-instrumentation = "0.48b0"
opentelemetry-instrumentation-asgi = "0.48b0"
opentelemetry-instrumentation-fastapi = "0.48b0"
opentelemetry-proto = "1.27.0"
opentelemetry-sdk = "1.27.0"
opentelemetry-semantic-conventions = "0.48b0"
opentelemetry-util-http = "0.48b0"
orjson = "3.10.7"
overrides = "7.7.0"
packaging = "23.2"
pandas = "2.2.3"
parameterized = "0.9.0"
parse = "1.20.2"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "10.4.0"
posthog = "3.7.0"
prompt-toolkit = "3.0.48"
propcache = "0.2.0"
protobuf = "4.25.5"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
pydantic-core = "2.23.4"
pyee = "11.1.1"
pygments = "2.18.0"
pyparsing = "3.1.4"
pypdf = "5.0.1"
pypika = "0.48.9"
pyppeteer = "2.0.0"
pyproject-hooks = "1.2.0"
pyquery = "2.0.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
pyyaml = "6.0.2"
regex = "2024.9.11"
requests = "2.32.3"
requests-html = "0.10.0"
requests-mock = "1.12.1"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
rich = "13.9.2"
rsa = "4.9"
s3transfer = "0.10.3"
safetensors = "0.4.5"
scikit-learn = "1.5.2"
scipy = "1.14.1"
seaborn = "0.13.2"
semantic-router = "0.0.46"
sentence-transformers = "3.1.1"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.6"
sqlalchemy = "2.0.35"
stack-data = "0.6.3"
starlette = "0.38.6"
sympy = "1.13.3"
tabulate = "0.9.0"
tenacity = "8.5.0"
threadpoolctl = "3.5.0"
tiktoken = "0.8.0"
tokenizers = "0.20.0"
torch = "2.2.2"
tqdm = "4.66.5"
traitlets = "5.14.3"
transformers = "4.45.2"
typer = "0.12.5"
types-requests = "2.31.0.6"
types-urllib3 = "1.26.25.14"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "1.26.20"
uvicorn = "0.31.1"
uvloop = "0.20.0"
w3lib = "2.2.1"
watchfiles = "0.24.0"
wcwidth = "0.2.13"
websocket-client = "1.8.0"
websockets = "10.4"
werkzeug = "3.0.4"
widgetsnbextension = "4.0.13"
wrapt = "1.16.0"
yarl = "1.14.0"
zipp = "3.20.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "BRAD-Chat"
version = "0.1.33"
description = "This package connects large language models with bioinformatics workflows."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = [ "beautifulsoup4==4.12.3", "chromadb==0.5.0", "ipython", "langchain_chroma==0.1.1", "langchain_community==0.2.4", "langchain_core==0.2.5", "langchain_nvidia_ai_endpoints==0.1.1", "langchain_text_splitters", "Requests", "torch", "transformers", "gget==0.28.6", "semantic-router==0.0.46",]
[[project.authors]]
name = "Joshua Pickard"
email = "jpic@umich.edu"

[project.urls]
Homepage = "https://github.com/Jpickard1/RAG-DEV"
"Bug Tracker" = "https://github.com/Jpickard1/RAG-DEV"

[tool.setuptools]
py-modules = ["BRAD",]

[tool.setuptools.packages.find]
where = [ "BRAD",]
